--- a/00_mlops_end2end_presentation.ipynb
+++ b/00_mlops_end2end_presentation.ipynb
@@ -110,9 +110,7 @@
    },
    "source": [
     "\n",
-    "<div style=\"text-align: center; line-height: 0; padding-top: 9px;\">\n",
-    "  <img src=https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/images/version2-serverless.png>\n",
-    "</div>"
+    "![](./files/images/version2-serverless.png)"
    ]
   },
   {
