--- a/01_unity_catalog_data_governance.ipynb
+++ b/01_unity_catalog_data_governance.ipynb
@@ -111,6 +111,41 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "d5bf0fe0-3291-498b-940d-746b38161944",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Utilice un cluster Serverless Environment 2 para ejecutar este notebook\n",
+    "Para ejecutar esta demostración, simplemente selecciona el cluster `Serverless` en el menú desplegable.\n",
+    "Comprueba que la versión del cluster serverless es la número 2 <br />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3e3cba22-57c7-424b-96a2-832323ba5fb0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "![](./files/images/version2-serverless.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "cf81ca43-7dfc-4ea3-8262-96eccaf8b3b2",
      "showTitle": false,
      "tableResultSettingsMap": {},
