--- a/04_from_notebook_to_models_in_uc.ipynb
+++ b/04_from_notebook_to_models_in_uc.ipynb
@@ -82,6 +82,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c4282888-b52b-4cfc-8662-c3eeedf20bdf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbdemos.create_cluster('mlops-end2end')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
