--- a/05_challenger_validation.ipynb
+++ b/05_challenger_validation.ipynb
@@ -259,6 +259,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -309,6 +310,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -328,6 +330,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -381,6 +384,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -442,6 +446,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -563,6 +568,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -606,6 +612,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -656,6 +663,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
+      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
