--- a/06_batch_inference.ipynb
+++ b/06_batch_inference.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "242d08c9-2885-4cf5-894b-285655c5e247",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3043ac25-429d-4381-ad36-d735be19d6d0",
      "showTitle": false,
@@ -48,7 +54,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "72eefd90-5241-4319-9fd3-50d889a553bb",
      "showTitle": false,
@@ -63,10 +72,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "eb608d98-7bc2-4459-a934-d5217f90fb43",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbdemos.create_cluster('mlops-end2end')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c70235ea-52ef-490f-9b8f-57a52ba2fb29",
      "showTitle": false,
@@ -125,14 +155,17 @@
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup $setup_inference_data=true"
+    "%run ./_resources/00-setup $setup_inference_data=true"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "6b3594a0-5e6c-4ed3-b0f1-1e7e70e341f7",
@@ -157,7 +190,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7de4a7fe-1bc4-4430-8a7a-b4167150c335",
      "showTitle": false,
@@ -173,7 +209,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7d7a6f01-0b00-44d7-b763-158a2c09ef42",
      "showTitle": false,
@@ -254,14 +293,17 @@
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup"
+    "%run ./_resources/00-setup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "17b612c9-8f56-4d20-8cf3-33bf2e1cda3d",
      "showTitle": false,
@@ -313,7 +355,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "23a801a9-9db2-4774-8851-79ad9bf8368f",
      "showTitle": false,
@@ -332,7 +377,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f6cc3bcd-d7a4-4407-ac51-df7aaf843250",
      "showTitle": false,
@@ -361,7 +409,13 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "environment_version": "2"
