--- a/09_AI_functions.ipynb
+++ b/09_AI_functions.ipynb
@@ -330,11 +330,208 @@
     "  ) as extracao\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "579cbbb5-1771-4edb-b94f-0d3096a489da",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "CREATE CATALOG IF NOT EXISTS `main_andrea`;\n",
+    "\n",
+    "CREATE SCHEMA IF NOT EXISTS `main_andrea`.`demo_ai_functions`;\n",
+    "\n",
+    "CREATE VOLUME IF NOT EXISTS `main_andrea`.`demo_ai_functions`.`archivos`;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a73fa7f8-ac48-4679-a9b4-7aae2daad78c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "\n",
+    "catalog = \"main_andrea\"\n",
+    "schema = \"demo_ai_functions\"\n",
+    "volume = \"archivos\"\n",
+    "\n",
+    "download_url = \"https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/data/reviews.csv\"\n",
+    "file_name = \"reviews.csv\"\n",
+    "table_name = \"reviews\"\n",
+    "path_volume = \"/Volumes/\" + catalog + \"/\" + schema + \"/\" + volume\n",
+    "path_table = catalog + \".\" + schema\n",
+    "print(path_table) # Show the complete path\n",
+    "print(path_volume) # Show the complete path\n",
+    "\n",
+    "dbutils.fs.cp(f\"{download_url}\", f\"{path_volume}\" + \"/\" + f\"{file_name}\")\n",
+    "\n",
+    "df = spark.read.csv(f\"{path_volume}/{file_name}\",\n",
+    "  header=True,\n",
+    "  inferSchema=True,\n",
+    "  sep=\",\",\n",
+    "  encoding=\"UTF-8\")\n",
+    "\n",
+    "df.write.mode(\"overwrite\").saveAsTable(f\"{path_table}.{table_name}\")\n",
+    "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e55b8bb1-f79d-491b-886d-6f6e979f5cf5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CREATE OR REPLACE TABLE main_andrea.demo_ai_functions.reviews_structured AS\n",
+    "SELECT\n",
+    "  ai_query(\n",
+    "    \"databricks-meta-llama-3-3-70b-instruct\",\n",
+    "    CONCAT(\n",
+    "      'Extract the following information from the review: ',\n",
+    "      'Location (city name, street name, whatever may be mentioned in the review), ',\n",
+    "      'Service Score (1–5), ',\n",
+    "      'Product Score (1–5), ',\n",
+    "      'Product Name (if mentioned) (comma separated if multiple), ',\n",
+    "      'Atmosphere Score [cleanliness, accessibility, location, etc] (1–5), ',\n",
+    "      'Sentiment (positive, negative, neutral) [Analyze the sentiment of the review and classify it as positive, negative, or neutral]. ',\n",
+    "      'If the review doesn’t contain an element, leave it blank or set it to zero. For instance, if the review does not mention service, then set service_score = 0. Urgency should always have a value. All scores should be 1–5 (if they are not null), with 1 being the worst and 5 being the best.',\n",
+    "      ' Review: ', review_es\n",
+    "    ),\n",
+    "    responseFormat => '{\n",
+    "                        \"type\": \"json_schema\",\n",
+    "                        \"json_schema\": {\n",
+    "                          \"name\": \"review_extraction\",\n",
+    "                          \"schema\": {\n",
+    "                            \"type\": \"object\",\n",
+    "                            \"properties\": {\n",
+    "                              \"location\": { \"type\": \"string\" },\n",
+    "                              \"service_score\": { \"type\": \"integer\" },\n",
+    "                              \"product_score\": { \"type\": \"integer\" },\n",
+    "                              \"product_name\": { \"type\": \"string\" },\n",
+    "                              \"atmosphere_score\": { \"type\": \"integer\" },\n",
+    "                              \"sentiment\": { \"type\": \"string\" }\n",
+    "                            }\n",
+    "                          }\n",
+    "                        }\n",
+    "                      }'\n",
+    "   ) AS structured_review, *\n",
+    "   FROM main_andrea.demo_ai_functions.reviews;                   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5c674aaa-e3b9-4229-a6e3-c97568ba069a",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1761230606259}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    " -- Now that we've got results, lets unpack the JSON so we can view as a table\n",
+    "CREATE OR REPLACE TABLE main_andrea.demo_ai_functions.reviews_structured_gold AS\n",
+    "SELECT\n",
+    "  parse_json(structured_review):location::string AS location,\n",
+    "  parse_json(structured_review):service_score::int AS service_score,\n",
+    "  parse_json(structured_review):product_score::int AS product_score,\n",
+    "  parse_json(structured_review):atmosphere_score::int AS atmosphere_score,\n",
+    "  parse_json(structured_review):sentiment::string AS sentiment,\n",
+    "  parse_json(structured_review):product_name::string AS product_name,\n",
+    "  *\n",
+    "FROM main_andrea.demo_ai_functions.reviews_structured;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "399a0543-de9d-4195-aa43-9393fcf71699",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1761231225055}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- With our AI augmented data ready, we can use it to narrow down just the reviews that we should be taking action on\n",
+    "select product_name, * except(product_name)\n",
+    "from main_andrea.demo_ai_functions.reviews_structured_gold\n",
+    "where sentiment = 'negative';"
+   ]
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
