--- a/02_feature_engineering.ipynb
+++ b/02_feature_engineering.ipynb
@@ -47,6 +47,41 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "a4bd20d4-e412-481e-bd30-a45428a95e54",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Utilice un cluster Serverless Environment 2 para ejecutar este notebook\n",
+    "Para ejecutar esta demostración, simplemente selecciona el cluster `Serverless` en el menú desplegable.\n",
+    "Comprueba que la versión del cluster serverless es la número 2 <br />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b2a01cb2-bc9a-4c61-ab0a-bda66555c8c1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "![](./files/images/version2-serverless.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "05f24747-89bf-447f-bb2f-229f6a9bdc86",
      "showTitle": false,
      "tableResultSettingsMap": {},
